# Backend

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Caddyfile  DEPLOY.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/: labeler.yml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 3c7d1a94e802_introduce_server_layer.py  63959be28960_create_users_channels_channel_.py  68c4e6a9dbcb_add_avatar_url_to_users.py  a1b2c3d4e5f7_add_message_deleted_at_and_kind.py  a9b8c7d6e5f4_create_tag_embeddings.py  aab774f1f8d4_create_messages.py  b1f2a3c4d5e6_add_messages_channel_id_index.py  b2c3d4e5f6a8_slack_mirror.py  c7d8e9f0a1b2_create_ai_question_cache.py  d3e4f5a6b7c8_ai_cache_variant_pool.py  e5f6a7b8c9d0_add_token_version_to_users.py  f1a2b3c4d5e6_drop_ai_question_cache.py
app/: main.py
app/core/: config.py  deps.py  redis.py  security.py
app/db/: base.py
app/models/: __init__.py  channel.py  message.py  platform_identity.py  server.py  tag.py  user.py
app/routers/: ai.py  auth.py  balance.py  bingo.py  chosung.py  draw.py  games.py  ladder.py  link_preview.py  messages.py  omok.py  servers.py  tags.py  tictactoe.py  users.py  watch.py  wheel.py  wordchain.py  ws.py
app/schemas/: ai.py  auth.py  balance.py  bingo.py  channel.py  chosung.py  draw.py  ladder.py  link_preview.py  message.py  omok.py  server.py  tag.py  tictactoe.py  user.py  watch.py  wheel.py  wordchain.py
app/services/: game_announce.py  game_registry.py  game_ttl.py  message_service.py  (+5 more)
docs/: API.md  ERD.md
scripts/: backup.sh  ec2-bootstrap.sh  seed_demo.py
tests/: conftest.py  test_ai.py  test_auth.py  test_bingo.py  test_draw.py  test_game_announce.py  test_game_registry.py  test_game_ttl.py  test_message_delete_and_welcome.py  test_messages.py  test_omok.py  test_servers.py  test_slack.py  test_slack_link.py  test_slack_mirror.py  test_slack_tags_ai.py  test_tags.py  test_wordchain.py
(+31 files in other folders)
