[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "argon2-cffi>=23.1.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.139.0",
    "pydantic-settings>=2.7.0",
    "pyjwt>=2.10.0",
    "python-multipart>=0.0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# 데모 시딩 스크립트는 긴 한국어 예시 문장(채팅 메시지)을 그대로 담고 있어
# 줄 길이 제한(E501)을 면제한다. 문장을 쪼개면 오히려 읽기 어려워진다.
"scripts/seed_demo.py" = ["E501"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Header", "fastapi.Query", "fastapi.File"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
